appId: com.coffstack.digitalnomadapp
---
- tapOn:
    id: 'email-input'
- inputText: 'testee2e@digitalnomad.com.br'

- tapOn:
    id: 'password-input'
- inputText: '123456'

- hideKeyboard

- tapOn:
    text: 'Entrar'

- assertVisible: '.*signed in.*'
